--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -79,15 +79,9 @@
                               <li> <a href="product.html">product</a> </li>
                               <li> <a href="blog.html"> Blog</a> </li>
                               <li> <a href="contact.html">Contact</a> </li>
-                              <li class="mean-last"> <a href="{% url 'register' %}">Sign Up</a> 
+                              <li class="mean-last"> 
                                  <select name="rec-type" id="rec-type">
-                                    <!-- <a href="{% url 'transactions' rec_type='expense' %}"> -->
-                                    <option value="expense">Expense</option>
-                                    <!-- </a> -->
-                                    <!-- <a href="{% url 'transactions' rec_type='expense' %}"> -->
-                                    <option value="income">Income</option>
-                                    <!-- </a> -->
-                                  </select>
+                                 <a href="{% url 'register' %}">Sign Up</a> 
                               </li>
                                
                            </ul>
