--- a/templates/product/product_list.html
+++ b/templates/product/product_list.html
@@ -1,5 +1,5 @@
 {% extends './Base.html' %} {%load crispy_forms_tags %}
-
+{% block content %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,25 +7,102 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Product List</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    
 </head>
 <body>
+  <script>
+    function showToaster(message) {
+      var toaster = document.getElementById("toaster");
+      toaster.innerHTML = message;
+      toaster.style.display = "block";
+      setTimeout(function () {
+        toaster.style.display = "none";
+      }, 1800); // hide after 5 seconds
+    }
+  </script>
     
-    {% block content %}
     
     <div class="card">
+      <div class="d-flex align-items-center justify-content-between">
         <h5 class="card-header">Products</h5>
+        <div id="toaster"></div>
+        <a href="{% url 'vendor_dashboard' %}" class="d-flex align-items-center">
+          <button type="button" class="btn rounded-pill btn-dark ">Back To {{user.username}} Dashboard</button>
+        </a>
+      </div>
         {% comment %} <h5 class="card-header">
           <a href="{% url 'create_project' %}" class="btn btn-primary">Create</a>
         </h5> {% endcomment %}
+        <script type="text/javascript">
+          function DeleteData(id) {
+            if (confirm("Are you sure you want to delete?")) {
+              $.ajax({
+                type: "GET",
+                url: "/product/delete_product/" + id,
+                success: function (data) {
+                  console.log(data);
+  
+                  //alert("Deleted successfully");
+                  showToaster("Product Deleted successfully");
+                  setTimeout(() => {
+                    location.reload();
+                  }, 5000);
+                },
+                error: function (data) {
+                  console.log(data);
+                  alert("Error");
+                },
+              });
+            }
+          }
+        </script>
         <div class="table-responsive text-nowrap">
           <table class="table">
             <thead>
               <tr>
-                <th>Product</th>
+                <th>Product
+                  <a href="?sort_by=product_name&amp;direction=asc">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+                      <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+                    </svg>
+                  </a>
+                  <a href="?sort_by=product_name&amp;direction=desc">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-circle-fill" viewBox="0 0 16 16">
+                      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
+                    </svg>
+                  </a>
+                </th>
                 <th>Description</th>
-                <th>category</th>
-                <th>Status</th>
+                <th>category
+                  {% comment %} <a href="?sort_by=category&amp;direction=asc">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+                      <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+                    </svg>
+                  </a>
+                  <a href="?sort_by=category&amp;direction=desc">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-circle-fill" viewBox="0 0 16 16">
+                      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
+                    </svg>
+                  </a> {% endcomment %}
+                </th>
+                <th>subcategory
+                  {% comment %} <a href="?sort_by=subcategory&amp;direction=asc">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+                      <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+                    </svg>
+                  </a>
+                  <a href="?sort_by=subcategory&amp;direction=desc">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-circle-fill" viewBox="0 0 16 16">
+                      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
+                    </svg>
+                  </a> {% endcomment %}
+                </th>
+                <th>price</th>
+                <th>Quantity</th>
                 <th>Actions</th>
               </tr>
             </thead>
@@ -41,20 +118,25 @@
                 <td>{{product.category}}</td>
                 <td>{{product.subcategory}}</td>
                 <td>{{product.price}}</td>
-                <td>{{product.brand}}</td>
-                <td><span class="badge bg-label-primary me-1">Active</span></td>
+                <td>{{product.quantity}}</td>
+                {% comment %} <td><span class="badge bg-label-primary me-1">Active</span></td> {% endcomment %}
                 <td>
                   
                   <div class="dropdown">
                       <a class="dropdown-item" href="{% url 'update_product' product.id %}"
-                        ><i class="bx bx-edit-alt me-1"></i> Update</a
-                      >
-                      <a class="dropdown-item" href="{% url 'delete_product' product.id  %}"
-                        ><i class="bx bx-trash me-1"></i> Delete</a
-                      >
+                        ><button type="button" class="btn rounded-pill btn-secondary">
+                          <span class="bx bx-edit-alt me-1"></span>&nbsp; Update
+                        </button>
+                      
+                      <a class="dropdown-item"> <button type="button" onclick="DeleteData({{product.id}})"
+                          class="btn rounded-pill btn-danger">
+                          <span class="bx bx-trash me-1"></span>&nbsp; Delete
+                        </button>
+                      
                       <a class="dropdown-item" href="{% url 'product_detail' product.id  %}"
-                      ><i class="bx bx-select me-1"></i> Detail</a
-                    >
+                      ><button type="button" class="btn rounded-pill btn-info">
+                        <i class='bx bxs-detail bx-hover' ></i>&nbsp; Details
+                      </button>
                   </div>
                 </td>
               </tr>
@@ -62,9 +144,13 @@
               {% endfor %}
             </tbody>
           </table>
+          
         </div>
+        
       </div>
-    {% endblock content %}
+      
+    
         
 </body>
 </html>
+{% endblock content %}
