--- a/templates/product/Base.html
+++ b/templates/product/Base.html
@@ -1,49 +1,77 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- plugins:css -->
-  <link rel="stylesheet" href="{% static 'assets/css/feather.css' %}">
-  <link rel="stylesheet" href="{% static 'assets/css/themify-icons.css' %}">
-  <link rel="stylesheet" href="{% static 'assets/css/vendor.bundle.base.css' %}">
-  <!-- endinject -->
-  <!-- Plugin css for this page -->
-  <link rel="stylesheet" href="{% static 'assets/css/dataTables.bootstrap4.css' %}">
-  <link rel="stylesheet" href="{% static 'assets/css/themify-icons.css' %}">
-  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/select.dataTables.min.css' %}">
-  <!-- End plugin css for this page -->
-  <!-- inject:css -->
-  <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
-  <!-- endinject -->
-  <link rel="icon" href="{% static 'assets/img/favicon/favicon.png' %}" type="image/gif" />
-  <!-- plugins:js -->
-  <script src="{% static 'assets/js/vendor.bundle.base.js' %}"></script>
-  <!-- endinject -->
-  <!-- Plugin js for this page -->
-  <script src="{% static 'assets/js/chart.js/Chart.min.js' %}"></script>
-  <script src="{% static 'assets/js/datatables.net/jquery.dataTables.js' %}"></script>
-  <script src="{% static 'assets/js/datatables.net-bs4/dataTables.bootstrap4.js' %}"></script>
-  <script src="{% static 'assets/js/dataTables.select.min.js' %}"></script>
-
-  <!-- End plugin js for this page -->
-  <!-- inject:js -->
-  <script src="{% static 'assets/js/off-canvas.js' %}"></script>
-  <script src="{% static 'assets/js/hoverable-collapse.js' %}"></script>
-  <script src="{% static 'assets/js/template.js' %}"></script>
-  <script src="{% static 'assets/js/settings.js' %}"></script>
-  <script src="{% static 'assets/js/todolist.js' %}"></script>
-  <!-- endinject -->
-  <!-- Custom js for this page-->
-  <script src="{% static 'assets/js/dashboard.js' %}"></script>
-  <script src="{% static 'assets/js/Chart.roundedBarCharts.js' %}"></script>
-  <!-- End custom js for this page-->
-</head>
-<body>
-    {% block content %}
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="{% static '/assets/img/favicon/favicon.png'%}"
+    />
     
-    {% endblock content %}
-</body>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Icons. Uncomment required icon fonts -->
+    <link
+      rel="stylesheet"
+      href="{% static '/assets/vendor/fonts/boxicons.css' %}"
+    />
+
+    <!-- Core CSS -->
+    <link
+      rel="stylesheet"
+      href="{% static '/assets/vendor/css/core.css'%}"
+      class="template-customizer-core-css"
+    />
+    <link
+      rel="stylesheet"
+      href="{% static '/assets/vendor/css/theme-default.css'%}"
+      class="template-customizer-theme-css"
+    />
+
+    <link rel="stylesheet" href="{% static '/assets/vendor/css/demo.css'%}" />
+
+    <!-- Vendors CSS -->
+    <link
+      rel="stylesheet"
+      href="{% static '/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css'%}"
+    />
+
+    <link
+      rel="stylesheet"
+      href="{% static '/assets/vendor/libs/apex-charts/apex-charts.css'%}"
+    />
+
+    <!-- Page CSS -->
+  </head>
+
+  <body>
+    <div class="layout-wrapper layout-content-navbar">
+      <div class="layout-container">
+        {% block navbar %} {% include './Navbar.html' %} {% endblock navbar %}
+
+        {% comment %} <nav
+          class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
+          id="layout-navbar">
+          {% block searchbar %} {% include '../search.html' %} {% endblock searchbar %}
+        </nav> {% endcomment %}
+
+        <div class="content-wrapper">
+          <div class="container-xxl flex-grow-1 container-p-y">
+            {% block content %} {% endblock content %}
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
