--- a/templates/product/create_product.html
+++ b/templates/product/create_product.html
@@ -1,4 +1,4 @@
-{% extends './Base.html' %} {%load crispy_forms_tags %}
+{% extends './Base.html' %} {% load crispy_forms_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,15 +16,15 @@
           <div
             class="card-header d-flex justify-content-between align-items-center"
           >
-            <h5 class="mb-0">Add Product</h5>
+            <h5 class="mb-0">Basic with Icons</h5>
             <small class="text-muted float-end">Merged input group</small>
           </div>
           <div class="card-body">
-            <form method="POST">
+            <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
               <div class="mb-3">
                 <label class="form-label" for="basic-icon-default-fullname"
-                  >Product  Name</label
+                  >Full Name</label
                 >
                 <div class="input-group input-group-merge">
                   <span
@@ -52,6 +52,8 @@
                   {{form.brand | as_crispy_field}}
                   {{form.description | as_crispy_field}}
                   {{form.price | as_crispy_field}}
+                  {{form.quantity | as_crispy_field}}
+                  {{form.product_image | as_crispy_field}}
 
                   
                   
@@ -59,7 +61,8 @@
                 </div>
               
               </div>
-              <button type="submit" class="btn btn-primary">Save</button>
+              <button type="submit" class="btn btn-primary">Add</button>
+              <button type="submit" class="btn btn-primary" name="saveAndAddAnother" value="1">Save and Add another</button> 
             </form>
           </div>
         </div>
