--- a/templates/user/Base.html
+++ b/templates/user/Base.html
@@ -2,11 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <link
       rel="icon"
       type="image/x-icon"
-      href="../assets/img/favicon/favicon.ico"
+      href="{% static '/assets/img/favicon/favicon.png' %}"
     />
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Icons. Uncomment required icon fonts -->
     <link
       rel="stylesheet"
@@ -47,18 +53,31 @@
     />
 
     <!-- Page CSS -->
+    <!-- Core JS -->
+    <!-- build:js assets/vendor/js/core.js -->
+    <script src="{% static '/assets/vendor/libs/jquery/jquery.js' %}"></script>
+    <script src="{% static '/assets/vendor/libs/popper/popper.js' %}"></script>
+    <script src="{% static '/assets/vendor/js/bootstrap.js' %}"></script>
+    <script src="{% static '/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js' %}"></script>
+
+    <script src="{% static '/assets/vendor/js/menu.js' %}"></script>
+    <!-- endbuild -->
+
+    <!-- Vendors JS -->
+
+    <!-- Main JS -->
+    <script src="{% static '/assets/js/main.js' %}"></script> 
+
+    <!-- Page JS -->
+
+    <!-- Place this tag in your head or just before your close body tag. -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script> 
   </head>
 
   <body>
     <div class="layout-wrapper layout-content-navbar">
       <div class="layout-container">
         {% block navbar %} {% include './Navbar.html' %} {% endblock navbar %}
-
-        {% comment %} <nav
-          class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
-          id="layout-navbar">
-          {% block searchbar %} {% include '../search.html' %} {% endblock searchbar %}
-        </nav> {% endcomment %}
 
         <div class="content-wrapper">
           <div class="container-xxl flex-grow-1 container-p-y">
