--- a/templates/user/vendor_dashboard.html
+++ b/templates/user/vendor_dashboard.html
@@ -1,7 +1,21 @@
-{% extends './Base.html' %}
+{% extends './Base.html' %} {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
-  
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vendor Dashboard</title>
+
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+        crossorigin="anonymous"
+    >
+    
+</head>
 
   <body>
     {% block content %}
@@ -9,13 +23,26 @@
       <h5 class="card-header">Products</h5>
       <h5 class="card-header">
         <a href="{% url 'create_product' %}" class="btn btn-primary">Add Product</a>
+        <a href="{% url 'product_list' %}" class="btn btn-secondary">List Of Products</a>
+        
       </h5>
       <div class="table-responsive text-nowrap">
         <table class="table">
           <thead>
             <tr>
-              <th>Product</th>
-              <th>Description</th>
+              <th>Product
+                <a href="?sort_by=product_name&amp;direction=asc">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+                    <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+                  </svg>
+                </a>
+                <a href="?sort_by=product_name&amp;direction=desc">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-circle-fill" viewBox="0 0 16 16">
+                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
+                  </svg>
+                </a>
+              </th>
+              <th>Category</th>
               <th>Action</th>
               {% comment %} <th>Actions</th> {% endcomment %}
             </tr>
@@ -27,13 +54,12 @@
                 <i class="fab fa-angular fa-lg text-danger me-3"></i>
                 <strong>{{product.product_name}}</strong>
               </td>
-              <td>{{product.description}}</td>
-              
+              <td>{{product.category}}</td>
               {% comment %} <td><span class="badge bg-label-primary me-1">Active</span></td> {% endcomment %}
               <td>
                 <div class="dropdown">
                   <a class="dropdown-item" href="{% url 'product_detail' product.id %}"
-                    ><i class="bx bx-select me-1"></i> Details</a
+                    ><i class="bx bx-select me-1"></i>View Details</a
                   >
                   
                 </div>
@@ -43,9 +69,14 @@
             {% endfor %}
           </tbody>
         </table>
+        
       </div>
     </div>
-    {% endblock content %} {% comment %}
+    <div>
+    </div>
+    
+    
+     {% comment %}
     <div class="layout-wrapper layout-content-navbar">
       <div class="layout-container">
         <div class="content-wrapper">
@@ -56,5 +87,6 @@
       </div>
     </div>
     {% endcomment %}
+    {% endblock content %}
   </body>
 </html>
